message queue is done

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,9 @@
 cmake_minimum_required(VERSION 3.0.0)
-project(queueTest VERSION 0.1.0)
 
-include(CTest)
-enable_testing()
+project(queueTest VERSION 0.1.0)
 
 add_executable(queueTest main.cpp)
 
-set(CPACK_PROJECT_NAME ${PROJECT_NAME})
-set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
-include(CPack)
+target_link_libraries(queueTest  pthread atomic)
+
+target_compile_features(queueTest PRIVATE cxx_std_20)
